--- a/src/com/qlsv/view/BangDiemCaNhan.form
+++ b/src/com/qlsv/view/BangDiemCaNhan.form
@@ -57,9 +57,7 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace min="-2" pref="393" max="-2" attributes="0"/>
                                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="jButton9" min="-2" pref="94" max="-2" attributes="0"/>
-                                  <EmptySpace pref="122" max="32767" attributes="0"/>
+                                  <EmptySpace max="32767" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="hocKyjTextField" min="-2" pref="72" max="-2" attributes="0"/>
@@ -78,7 +76,7 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jButton4" min="-2" pref="21" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="maLopjTextField" max="32767" attributes="0"/>
+                                  <Component id="maLopjTextField" pref="153" max="32767" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jButton5" min="-2" pref="25" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
@@ -86,15 +84,20 @@
                                   <EmptySpace max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <Component id="jButton6" min="-2" pref="21" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="cKjTextField" min="-2" pref="149" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
-                          <Component id="jButton7" min="-2" pref="21" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="DiemjTextField" min="-2" pref="159" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
-                          <Component id="jButton8" min="-2" pref="21" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Group type="102" attributes="0">
+                                  <Component id="jButton6" min="-2" pref="21" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="cKjTextField" min="-2" pref="149" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                                  <Component id="jButton7" min="-2" pref="21" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="DiemjTextField" min="-2" pref="159" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                                  <Component id="jButton8" min="-2" pref="21" max="-2" attributes="0"/>
+                              </Group>
+                              <Component id="jButton9" min="-2" pref="119" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -111,22 +114,14 @@
                   </Group>
                   <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                          <Component id="DiemjTextField" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
-                          <Component id="jButton8" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="cKjTextField" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
-                          <Component id="jButton7" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="qTjTextField" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
-                          <Component id="jButton6" min="-2" pref="25" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jButton5" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
-                          <Component id="maLopjTextField" min="-2" pref="25" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="DiemjTextField" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jButton8" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="cKjTextField" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jButton7" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="qTjTextField" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jButton6" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jButton5" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="maLopjTextField" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="jButton4" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="tCjTextField" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="tenHPjTextField" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
